# desktop

./: .env.example  .gitignore  FIXES_SUMMARY.md  README.md  _inspect_glb.mjs  _inspect_glb2.mjs  _test_tts_ws.mjs  _test_tts_ws2.mjs  _test_tts_ws3.mjs  _test_tts_ws4.mjs  asr-proxy.mjs  code-struct.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tts-proxy.mjs  vite.config.ts  智能问诊智能体规范（测试文档）.docx
.github/workflows/: build-windows.yml
eval/: eval.mjs  report-2026-05-23T07-30-10-218Z.txt  report-2026-05-23T07-31-38-834Z.txt  report-2026-05-23T07-40-46-932Z.txt  report-2026-05-23T07-43-30-355Z.txt  report-2026-05-23T07-45-23-774Z.txt  results-2026-05-23T07-30-10-218Z.json  results-2026-05-23T07-31-38-834Z.json  results-2026-05-23T07-40-46-932Z.json  results-2026-05-23T07-43-30-355Z.json  results-2026-05-23T07-45-23-774Z.json  test-data.json
src/: App.vue
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ble/: mod.rs
src-tauri/src/proxy/: auth.rs  business.rs  consultation.rs  llm.rs  mod.rs  tongue_ai.rs  ws.rs
src/api/: auth.ts  consultation.ts  consultationDetail.ts  pulseAPI.ts  tongueAI.ts  tonguePulse.ts
src/components/: CameraCapture.vue  PulseCollectionOverlay.vue
src/composables/: useDetailQuestion.ts  useLLM.ts  useMeridianBody.ts  usePulsePen.ts  useSelfFeature.ts  useSpeechRecognition.ts  useTTS.ts  useTonguePulseCapture.ts
src/config/: proxy.ts
src/data/: consultationDetail.ts  consultationFlow.ts  consultationResponse.ts  llmPrompt.ts  meridianColors.ts  meridianData.ts  selfFeature.ts  syndromeOutput.ts  (+1 more)
相关文件/: 2、咳嗽.docx  2、数字人设计--开始阶段.docx  3、失眠.docx  3、数字人设计--判断主症.docx  4、数字人设计--舌脉信息.docx  7、数字人设计--慢性疲劳.docx  关于舌和脉的症状定义及计算.docx  头痛.docx  感冒问诊.docx  数字人纯自选症状.docx  数字人纯自选症状解释.docx
(+73 files in other folders)
