[package]
name = "tcm-consultation"
version = "0.1.0"
description = "中医智能问诊系统"
authors = ["you"]
edition = "2021"

[lib]
name = "tcm_consultation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 代理服务器依赖
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tungstenite = "0.29"
futures-util = "0.3"
