[package]
name = "tcm-consultation"
version = "0.1.0"
description = "中医智能问诊系统"
authors = ["you"]
edition = "2021"

[lib]
name = "tcm_consultation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# 代理服务器依赖
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tungstenite = "0.29"
futures-util = "0.3"

# BLE 蓝牙（脉诊笔设备通信）
btleplug = "0.11"
uuid = "1"

# Windows WebView2 摄像头/麦克风权限
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
